--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "devDependencies": {
-    "react-scripts": "^1.1.0"
+    "react-scripts": "^1.1.0",
+    "react-router-dom": "^4.2.2"
   },
   "dependencies": {
     "axios": "^0.17.1",
